Added message reminding viewer that tests won't run locally.

--- a/test/index.html
+++ b/test/index.html
@@ -19,5 +19,6 @@
 
 <pre class="commenttest" href="./tests.js"></pre>
 
+  <center><small style="color:silver">(Currently won't run locally, you must use a server. Use <tt>node etc/server.js</tt>)</small></center>
   </body>
 </html>
