--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,6 @@
 
 <pre class="commenttest" href="./tests.js"></pre>
 
-  <center><small style="color:silver">(Currently won't run locally, you must use a server. Use <tt>node etc/server.js</tt>)</small></center>
+  <center><small style="color:silver">(Currently won't run locally for Chrome, you must use a server instead. Use <tt>make test_server</tt>)</small></center>
   </body>
 </html>
