--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,8 @@
     <script src="../etc/doctest.js"></script>
     <link href="../etc/doctest.css" rel="stylesheet">
     <script src="../template.js"></script>
-    <script src="test_basic.js"></script>
+    <script src="example_basics.js"></script>
+    <script src="example_nested.js"></script>
     <style type="text/css">
       body {
         margin: 2em 5em;
