Added support for "remodulerization" (that's right) and updated the readme.

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
     <script src="../template.js"></script>
     <script src="example_basics.js"></script>
     <script src="example_nested.js"></script>
+    <script src="example_class.js"></script>
     <style type="text/css">
       body {
         margin: 2em 5em;
